--- a/meta-aarch64/conf/machine/genericarmv8.conf
+++ b/meta-aarch64/conf/machine/genericarmv8.conf
@@ -1,10 +1,8 @@
 #@TYPE: Machine
-#@NAME: generic armv7a machine
+#@NAME: generic armv8 machine
 #@DESCRIPTION: generic machine to be used by linaro-media-create
 
-DEFAULTTUNE ?= "armv7athf-neon"
-
-require conf/machine/include/arm/arch-armv7a.inc
+require conf/machine/include/arm64/arch-armv8.inc
 
 PREFERRED_PROVIDER_virtual/xserver ?= "xserver-xorg"
 
@@ -15,15 +13,17 @@ XSERVER ?= "xserver-xorg \
             xf86-video-fbdev \
             xf86-input-keyboard"
 
-MACHINE_FEATURES = "usbhost screen"
+MACHINE_FEATURES = ""
 
 # Don't include kernels in standard images
 RDEPENDS_kernel-base = ""
 
-# Use a common kernel recipe for all QEMU machines
-PREFERRED_PROVIDER_virtual/kernel ?= "linux-yocto"
+PREFERRED_PROVIDER_virtual/kernel ?= "linux-linaro"
 
-KERNEL_IMAGETYPE = "zImage"
+KERNEL_IMAGETYPE = "Image"
+
+# We have to disable SERIAL_CONSOLE due to auto-serial-console
+#SERIAL_CONSOLE = "115200 ttyAMA0"
 
 # Force auto-serial-console to be used by all image types
 # Ideally this would be part of core oe or as a bbclassappend,
@@ -31,3 +31,7 @@ KERNEL_IMAGETYPE = "zImage"
 # it here
 EXTRA_IMAGE_FEATURES += "autoserial"
 PACKAGE_GROUP_autoserial = "auto-serial-console"
+
+# we do not want to have getty running on tty1 as we run
+# auto-serial-console there
+USE_VT = "0"
